# klaster-project

./: .env.example  .gitignore  README.md  biome.json  codama.json  package.json  playwright.config.ts  tsconfig.json
anchor/: Anchor.toml  Cargo.toml
anchor/programs/klaster_vault/: Cargo.toml
anchor/programs/klaster_vault/src/: lib.rs
src/app/: error.tsx  forbidden.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  unauthorized.tsx
src/app/(marketing)/: layout.tsx  page.tsx
src/app/(platform)/: layout.tsx
src/components/auth/: wallet-auth-control.tsx
src/components/klaster/: logo-mark.tsx  system-state-frame.tsx  ui-primitives.tsx
src/components/marketing/: home-content.ts  home-page.tsx
src/components/providers/: app-providers.tsx
src/components/shells/: marketing-chrome.tsx  page-placeholder.tsx  platform-chrome.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  label.tsx  separator.tsx  tabs.tsx
src/components/vaults/: health-chart.tsx  purchase-panel-logic.test.ts  purchase-panel-logic.ts  purchase-panel.tsx
src/components/workspace/: admin-approval-rail.tsx  admin-review-page.tsx  operator-deposit-rail.tsx  operator-page.tsx  portfolio-claim-action.tsx  portfolio-page.tsx
src/lib/: base58.ts  env.ts  format.test.ts  format.ts  navigation.ts
src/lib/solana/: admin-approval.ts  (+7 more)
src/server/: crypto.ts
supabase/migrations/: 20260406123000_s03_auth_data_storage_webhook_backbone.sql  20260406183000_s08_hybrid_pool_expansion.sql
tests/e2e/: foundation-shell.spec.ts  marketplace-vault-detail.spec.ts
(+69 files in other folders)
